Fixed text out of bounds in task type select

--- a/src/components/tasks/TaskTypeDropdown.less
+++ b/src/components/tasks/TaskTypeDropdown.less
@@ -1,5 +1,11 @@
-.task-types-dropdown .dropdown-item {
-    padding-right: 0.5Rem;
+.task-types-dropdown {
+    .dropdown-item {
+        padding-right: 0.5Rem;
+    }
+    
+    .dropdown-menu span.text-truncate {
+        max-width: 200px;
+    }
 }
 
 .task-type-action {
@@ -13,4 +19,8 @@
     border-radius: .25rem;
     margin-right: .75Rem;
     margin-top: .2Rem;
+}
+
+.minw-0 {
+    min-width: 0; 
 }
